进行checkstyle和spotbug后的修改